fixed form view on safari.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,7 +42,7 @@ header {
 .login {
   display:flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-start;
 }
 
 .login > label {
